# Diplom-cyber-security

./: .dockerignore  .env.example  .gitignore  Caddyfile  Caddyfile.ip  DEPLOYMENT_DOCKER.md  Dockerfile  MIGRATION_SUMMARY.md  POSTGRES_SETUP.md  Procfile  README.md  app.py  compose.caddy.yaml  compose.ip.yaml  compose.yaml  launch_on_ip_78.29.55.68.ps1  launch_public_tunnel.ps1  login_attempts.db  render.yaml  requirements.txt  update_api_urls.py
cyber-vis/: .gitignore  DEPLOYMENT_QUICK_START.md  DEPLOYMENT_RU.md  QUICKSTART.md  README.md  database.py  desktop_app.py  login_attempts.db  loginui.py  pyproject.toml  render.yaml  requirements.txt  server.py  update_api_urls.py  website_server.py
cyber-vis/src/cyber_vis/: __init__.py
cyber-vis/src/cyber_vis/app/scripts/: login.py  loginui.ui  websocket_client.py
cyber-vis/src/cyber_vis/app/templates/: index.html  monitor.html
patches_cyber_vis/: 0001-Update.patch
