[tool.poetry]
name = "cyber-vis"
version = "1.0.0"
description = "Система мониторинга попыток входа"
authors = ["Ilya <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
websockets = "^12.0"
requests = "^2.31.0"
pyqt6 = "^6.6.0"
websocket = "^0.2.1"

[tool.poetry.scripts]
login-server = "server:app"
login-desktop = "desktop_app:main"
login-monitor = "website_server:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"